// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskListController should render a complete application 1`] = `
"
  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <div class="govuk-body" data-testid="app-page-body">
        <h1 class="govuk-heading-l">Test page heading</h1>
          <p data="test-id-task-to-complete-count">
            You have completed all sections.
          </p>
        
<ul class="govuk-task-list">
  <li class="govuk-task-list__item govuk-task-list__item--with-link">
    <div class="govuk-task-list__name-and-hint">
      <a class="govuk-link govuk-task-list__link" href="/origin/check-answers" aria-describedby="task-list-1-status">
        Movement origin
      </a>
    </div>
    <div class="govuk-task-list__status" id="task-list-1-status">
      Completed
    </div>
  </li>
  <li class="govuk-task-list__item govuk-task-list__item--with-link">
    <div class="govuk-task-list__name-and-hint">
      <a class="govuk-link govuk-task-list__link" href="/destination/check-answers" aria-describedby="task-list-2-status">
        Movement destination
      </a>
    </div>
    <div class="govuk-task-list__status" id="task-list-2-status">
      Completed
    </div>
  </li>
</ul>

        <form method="POST">
          <input type="hidden" name="crumb" value="csrf-value"> <button type="submit" class="govuk-button" data-module="govuk-button">
  Review your application and submit
</button>
        </form>
      </div>
    </div>
  </div>
        "
`;

exports[`TaskListController should render a partially complete application 1`] = `
"
  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <div class="govuk-body" data-testid="app-page-body">
        <h1 class="govuk-heading-l">Test page heading</h1>
          <p>
            You have
            <span data="test-id-task-to-complete-count">1 out of 2</span>
            sections left to complete.
          </p>
        
<ul class="govuk-task-list">
  <li class="govuk-task-list__item govuk-task-list__item--with-link">
    <div class="govuk-task-list__name-and-hint">
      <a class="govuk-link govuk-task-list__link" href="/origin/check-answers" aria-describedby="task-list-1-status">
        Movement origin
      </a>
    </div>
    <div class="govuk-task-list__status" id="task-list-1-status">
      Completed
    </div>
  </li>
  <li class="govuk-task-list__item govuk-task-list__item--with-link">
    <div class="govuk-task-list__name-and-hint">
      <a class="govuk-link govuk-task-list__link" href="/destination/type-of-destination" aria-describedby="task-list-2-status">
        Movement destination
      </a>
    </div>
    <div class="govuk-task-list__status" id="task-list-2-status">
      <strong class="govuk-tag govuk-tag--blue">
        Incomplete
      </strong>
    </div>
  </li>
</ul>

        <form method="POST">
          <input type="hidden" name="crumb" value="csrf-value"> <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  Review your application and submit
</button>
        </form>
      </div>
    </div>
  </div>
        "
`;

exports[`TaskListController should render an empty application (complete with "cannot start yet" sections) 1`] = `
"
  <div class="govuk-grid-row">
    <div class="govuk-grid-column-two-thirds">
      <div class="govuk-body" data-testid="app-page-body">
        <h1 class="govuk-heading-l">Test page heading</h1>
          <p>
            You have
            <span data="test-id-task-to-complete-count">2 out of 2</span>
            sections left to complete.
          </p>
        
<ul class="govuk-task-list">
  <li class="govuk-task-list__item govuk-task-list__item--with-link">
    <div class="govuk-task-list__name-and-hint">
      <a class="govuk-link govuk-task-list__link" href="/origin/to-or-from-own-premises" aria-describedby="task-list-1-status">
        Movement origin
      </a>
    </div>
    <div class="govuk-task-list__status" id="task-list-1-status">
      <strong class="govuk-tag govuk-tag--blue">
        Incomplete
      </strong>
    </div>
  </li>
  <li class="govuk-task-list__item">
    <div class="govuk-task-list__name-and-hint">
      <div>
        Movement destination
      </div>
    </div>
    <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="task-list-2-status">
      Cannot start yet
    </div>
  </li>
</ul>

        <form method="POST">
          <input type="hidden" name="crumb" value="csrf-value"> <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
  Review your application and submit
</button>
        </form>
      </div>
    </div>
  </div>
        "
`;
